--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "npx eslint **/*.{js,jsx,ts,tsx}",
+    "lint:styles": "npx stylelint **/*{.scss,.css}",
     "preview": "vite preview"
   },
   "dependencies": {
